k8s/discovery-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: sc-platform
spec:
  selector:
    app: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: sc-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: spring-cloud-platform/discovery-server:latest
          ports:
            - containerPort: 8761
