k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: sc-platform
spec:
  selector:
    app: user-service
  ports:
    - port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: sc-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: spring-cloud-platform/user-service:latest
          ports:
            - containerPort: 9001
